--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>phone</h3>
-											<p>+91 702-399-3183</p>
+											<p><a href="tel:+917023993183">+91 702-399-3183</a></p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>email</h3>
-											<p>rohankumawat.pinkcity@gmail.com</p>
+											<p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohankumawat.pinkcity@gmail.com" target="_blank">rohankumawat.pinkcity@gmail.com</a></p>
 										</div>
 									</div>
 									<!-- <div class="col-sm-4">
