--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-                        <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
+                        <img class="w-100 img-fluid mb-4" src="img/width_7201.png" alt="Image">
                         <h1 class="text-primary mt-2">Rohan Kumawat</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
@@ -70,25 +70,25 @@
                         </p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Name:</span> John Doe
+                                <span class="fw-medium text-primary">Name:</span> Rohan Kumawat
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Birthday:</span> 1 April 1990
+                                <span class="fw-medium text-primary">Birthday:</span> 10 July 2000
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Degree:</span> Master
+                                <span class="fw-medium text-primary">Degree:</span> BTech CS
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 10 Years
+                                <span class="fw-medium text-primary">Experience:</span> 1.5+ Years
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +012 345 6789
+                                <span class="fw-medium text-primary">Phone:</span> <a href="tel:+917023993183" style="color: #fff;">+91 7023993183</a> 
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Email:</span> info@example.com
+                                <span class="fw-medium text-primary">Email:</span> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rohankumawat.pinkcity@gmail.com" style="color: #fff;" target="_blank">rohankumawat.pinkcity@gmail.com</a>
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Address:</span> 123 Street, New York, USA
+                                <span class="fw-medium text-primary">Address:</span> Jaipur, Rajasthan
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Freelance:</span> Available
@@ -97,7 +97,7 @@
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">10</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">2</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Years of</p>
                                         <h5 class="mb-0">Experience</h5>
@@ -106,7 +106,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">100</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Happy</p>
                                         <h5 class="mb-0">Clients</h5>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">200</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">18</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -133,7 +133,7 @@
                             <div class="col-sm-6">
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">HTML</p>
+                                        <p class="mb-2">ASP.NET Core</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">CSS</p>
+                                        <p class="mb-2">ASP.NET MVC</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">PHP</p>
+                                        <p class="mb-2">Web APIs</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
@@ -162,7 +162,7 @@
                             <div class="col-sm-6">
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Javascript</p>
+                                        <p class="mb-2">SQL / MongoDb</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Angular JS</p>
+                                        <p class="mb-2">HTML / CSS / JavaScript / React</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Wordpress</p>
+                                        <p class="mb-2">Microservices</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
