--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                             <div class="typed-text d-none">ASP.NET Developer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/rohan-kumawat-7b4a68247/"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/rrohankumawat/?hl=en"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="https://docs.google.com/document/d/e/2PACX-1vRXCCtOuiAyHUZONN9l7rRprk9YIwl78M-RiRBI4sRwyBEudrr8yWyr-5wYJ8s00QVLeqOdTDIq8Qor/pub" target="_blank" class="btn w-50 border-end">Download CV</a>
@@ -198,11 +198,11 @@
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
+                                <h5 class="mb-1">ASP.NET Developer</h5>
+                                <p class="mb-2">Sumedha Softech Pvt Ltd | <small>Jan 2023 - Jun 2024</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
-                            <div class="position-relative mb-4">
+                            <!-- <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Web Designer</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
@@ -213,7 +213,7 @@
                                 <h5 class="mb-1">Web Designer</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-                            </div>
+                            </div> -->
                         </div>
                     </section>
                     <!-- Expericence End -->
@@ -238,29 +238,43 @@
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
-                                    <h5 class="mb-2">Web Design</h5>
-                                    <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
+                                    <h5 class="mb-2">Website Development</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <i class="fab fa-2x fa-android mx-auto mb-4"></i>
-                                    <h5 class="mb-2">Apps Development</h5>
-                                    <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
+                                    <i class="fab fa-2x fa-windows mx-auto mb-4"></i>
+                                    <h5 class="mb-2">Windows App Development</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <i class="fa fa-2x fa-search mx-auto mb-4"></i>
-                                    <h5 class="mb-2">SEO</h5>
-                                    <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
+                                    <i class="fa fa-2x fa-cloud mx-auto mb-4"></i>
+                                    <h5 class="mb-2">API & Cloud</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <i class="fa fa-2x fa-database mx-auto mb-4"></i>
+                                    <h5 class="mb-2">Backend</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="service-item">
+                                    <i class="fa fa-2x fa-code mx-auto mb-4"></i>
+                                    <h5 class="mb-2">HTML/CSS/Javascript</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-edit mx-auto mb-4"></i>
-                                    <h5 class="mb-2">Content Creating</h5>
-                                    <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p>
+                                    <h5 class="mb-2">Technical Content Writing</h5>
+                                    <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
                                 </div>
                             </div>
                         </div>
