--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                     <h1 class="text-primary mt-2">Rohan Kumawat</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
-                        <div class="typed-text d-none">ASP.NET Developer, Web API Developer, Front End Developer,
-                            Windows Apps Developer, Backend Developer</div>
+                        <div class="typed-text d-none">ASP.NET Developer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
                         <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i
