Experience section updated

--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
                                 style="top: -5px; left: -50px;"></span>
                             <h5 class="mb-1">ASP.NET Developer</h5>
                             <p class="mb-2">Sumedha Softech Pvt Ltd | <small>Jan 2023 - Jun 2024</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <p>Collaborated with senior developers in using Designed and developed RESTful APIs using ASP.NET Core 7, ensuring secure and efficient data handling, Migrated legacy systems, Contributed to Agile Scrum processes, participating in sprint planning, daily standups, and client communication.</p>
                         </div>
                         <!-- <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
