--- a/index.html
+++ b/index.html
@@ -329,44 +329,38 @@
 
                 <!-- Testimonial Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="title pb-3 mb-5">Testimonial</h1>
+                    <h1 class="title pb-3 mb-5">Personal Github Repositories</h1>
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-left">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr
-                                dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
-                                eirmod eos, labore diam clita</p>
+                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/CoffeeApp_Desktop" target="_blank">CoffeeBarista Desktop Application</a></br><a href="https://github.com/rohanpin1/CafeApp_api" target="_blank">CoffeeBarista API Project</a></p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;">
+                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
                                 <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">Client Name</p>
-                                    <i>Profession</i>
+                                    <p class="text-primary fs-5 mb-1">.NET Winforms</p>
+                                    <i>rohanpin1</i>
                                 </div>
                             </div>
                         </div>
                         <div class="text-left">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr
-                                dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
-                                eirmod eos, labore diam clita</p>
+                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/Logistics-Project" target="_blank">Shipping Logistics</a></p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;">
+                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
                                 <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">Client Name</p>
-                                    <i>Profession</i>
+                                    <p class="text-primary fs-5 mb-1">Umbraco</p>
+                                    <i>rohanpin1</i>
                                 </div>
                             </div>
                         </div>
                         <div class="text-left">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr
-                                dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet
-                                eirmod eos, labore diam clita</p>
+                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/AdminPanelWebsite" target="_blank">Admin Panel Website</a></p>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;">
+                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
                                 <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">Client Name</p>
-                                    <i>Profession</i>
+                                    <p class="text-primary fs-5 mb-1">ASP.NET Core & Web API</p>
+                                    <i>rohanpin1</i>
                                 </div>
                             </div>
                         </div>
