--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row g-5">
             <div class="col-lg-4 sticky-lg-top vh-100">
                 <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-                    <img class="w-100 img-fluid mb-4" src="img/width_7201.png" alt="Image">
+                    <img class="w-100 img-fluid mb-4" src="img/profile1.png" alt="Image">
                     <h1 class="text-primary mt-2">Rohan Kumawat</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
@@ -330,7 +330,7 @@
                 <!-- Testimonial Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5">Personal Github Repositories</h1>
-                    <div class="owl-carousel testimonial-carousel">
+                    <div class="owl-carousel testimonial-carousel github_carousel">
                         <div class="text-left">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
                             <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/CoffeeApp_Desktop" target="_blank">CoffeeBarista Desktop Application</a></br><a href="https://github.com/rohanpin1/CafeApp_api" target="_blank">CoffeeBarista API Project</a></p>
