Go back to login page error page issue fixed

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             <a class="text-light px-3 border-end" href="#">Terms</a>
                             <a class="text-light px-3 border-end" href="#">FAQs</a>
                             <a class="text-light px-3 border-end" href="#">Help</a>
-                            <a class="text-light px-3" href="login/index.html" target="_blank">CMS</a>
+                            <a class="text-light px-3" href="/" target="_blank">CMS</a>
                         </div>
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
