--- a/login/index.html
+++ b/login/index.html
@@ -32,7 +32,7 @@
       </div> -->
       <button type="submit">Log In</button>
       <div class="register">
-        <p>Back to <a href="/index.html">Home Page</a></p>
+        <p>Back to <a href="/">Home Page</a></p>
       </div>
     </form>
   </div>
