Project Carousel Done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="text-primary mt-2">Rohan Kumawat</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
-                        <div class="typed-text d-none">ASP.NET Developer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer</div>
+                        <div class="typed-text d-none">ASP.NET Developer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer, Umbraco Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
                         <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i
@@ -331,39 +331,7 @@
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5">Personal Github Repositories</h1>
                     <div class="owl-carousel testimonial-carousel github_carousel">
-                        <div class="text-left">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/CoffeeApp_Desktop" target="_blank">CoffeeBarista Desktop Application</a></br><a href="https://github.com/rohanpin1/CafeApp_api" target="_blank">CoffeeBarista API Project</a></p>
-                            <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
-                                <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">.NET Winforms</p>
-                                    <i>rohanpin1</i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-left">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/Logistics-Project" target="_blank">Shipping Logistics</a></p>
-                            <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
-                                <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">Umbraco</p>
-                                    <i>rohanpin1</i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-left">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p class="fs-4 mb-4"><a href="https://github.com/rohanpin1/AdminPanelWebsite" target="_blank">Admin Panel Website</a></p>
-                            <div class="d-flex align-items-center">
-                                <img class="img-fluid" src="img/microsoft.png" style="width: 60px; height: 60px;">
-                                <div class="ps-3">
-                                    <p class="text-primary fs-5 mb-1">ASP.NET Core & Web API</p>
-                                    <i>rohanpin1</i>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </section>
                 <!-- Testimonial End -->
@@ -436,7 +404,6 @@
                             <a class="text-light px-3" href="login/index.html" target="_blank">CMS</a>
                         </div>
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         <p class="m-0">&copy; All Rights Reserved by Rohan 2024
                     </div>
                 </section>
