Services Section Done

--- a/index.html
+++ b/index.html
@@ -205,49 +205,8 @@
                 <!-- Services Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5">Services</h1>
-                    <div class="row g-4">
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
-                                <h5 class="mb-2">Website Development</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fab fa-2x fa-windows mx-auto mb-4"></i>
-                                <h5 class="mb-2">Windows App Development</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-cloud mx-auto mb-4"></i>
-                                <h5 class="mb-2">API & Cloud</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-database mx-auto mb-4"></i>
-                                <h5 class="mb-2">Backend</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-code mx-auto mb-4"></i>
-                                <h5 class="mb-2">HTML/CSS/Javascript</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-edit mx-auto mb-4"></i>
-                                <h5 class="mb-2">Technical Content Writing</h5>
-                                <!-- <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore</p> -->
-                            </div>
-                        </div>
+                    <div class="row g-4 services_section">
+                        
                     </div>
                 </section>
                 <!-- Services End -->
