--- a/index.html
+++ b/index.html
@@ -167,7 +167,14 @@
                         <div class="position-relative mb-4">
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
                                 style="top: -5px; left: -50px;"></span>
-                            <h5 class="mb-1">ASP.NET Developer</h5>
+                            <h5 class="mb-1">ASP.NET Core Developer</h5>
+                            <p class="mb-2">Eoxys IT Solutions LLP | <small>Oct 2024 - Present</small></p>
+                            <p>As an ASP.NET Developer, I am responsible for leading .NET development within my company, focusing on building and optimizing robust APIs, scalable ASP.NET Core applications, and efficient backend solutions. My expertise includes .NET Core 6+, database management, IIS server configuration, and seamless code deployment. I thrive on writing clean, efficient, and maintainable code to enhance system performance and reliability. Passionate about backend development, I continuously explore new technologies and best practices to deliver high-quality solutions. 🚀</p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <span class="bi bi-arrow-right fs-4 text-light position-absolute"
+                                style="top: -5px; left: -50px;"></span>
+                            <h5 class="mb-1">ASP.NET Core Developer</h5>
                             <p class="mb-2">Sumedha Softech Pvt Ltd | <small>Jan 2023 - Jun 2024</small></p>
                             <p>Collaborated with senior developers in using Designed and developed RESTful APIs using ASP.NET Core 7, ensuring secure and efficient data handling, Migrated legacy systems, Contributed to Agile Scrum processes, participating in sprint planning, daily standups, and client communication.</p>
                         </div>
