--- a/index.html
+++ b/index.html
@@ -301,7 +301,18 @@
                     </div>
                 </section>
                 <!-- Testimonial End -->
-
+                <!-- Blogs Start -->
+<section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+    <h1 class="title pb-3 mb-5">Blogs</h1>
+    <div class="row blog_row">
+        <div class="col-12">
+            <div class="row">
+                
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Blogs End -->
                 <!-- Contact Start -->
                 <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
                     <h1 class="title pb-3 mb-5">Contact Me</h1>
@@ -399,7 +410,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    
+    <script src="js/blog.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="store/store.js" defer type="module"></script>
     <script src="js/content.js" type="module"></script>
