--- a/index.html
+++ b/index.html
@@ -302,16 +302,24 @@
                 </section>
                 <!-- Testimonial End -->
                 <!-- Blogs Start -->
+<!-- Blogs Start -->
 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
     <h1 class="title pb-3 mb-5">Blogs</h1>
-    <div class="row blog_row">
+    <div class="row">
         <div class="col-12">
-            <div class="row">
-                
+            <div class="row" id="blogs-container">
+                <!-- Blog cards will be dynamically inserted here -->
             </div>
+            <!-- Pagination -->
+            <nav aria-label="Blogs Pagination">
+                <ul class="pagination justify-content-center mt-4" id="pagination">
+                    <!-- Pagination buttons will be dynamically inserted here -->
+                </ul>
+            </nav>
         </div>
     </div>
 </section>
+<!-- Blogs End -->
 <!-- Blogs End -->
                 <!-- Contact Start -->
                 <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
