--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <div class="d-flex justify-content-center mt-auto mb-3">
                         <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i
                                 class="fab fa-twitter"></i></a>
-                        <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i
-                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-secondary btn-square mx-1" href="https://github.com/rohanpin1"><i
+                                class="fab fa-github"></i></a>
                         <a class="btn btn-secondary btn-square mx-1"
                             href="https://www.linkedin.com/in/rohan-kumawat-7b4a68247/"><i
                                 class="fab fa-linkedin-in"></i></a>
