--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             href="https://www.instagram.com/rrohankumawat/?hl=en"><i class="fab fa-instagram"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between border-top">
-                        <a href="https://docs.google.com/document/d/e/2PACX-1vRXCCtOuiAyHUZONN9l7rRprk9YIwl78M-RiRBI4sRwyBEudrr8yWyr-5wYJ8s00QVLeqOdTDIq8Qor/pub"
+                        <a href="./store/rohanresume.pdf"
                             target="_blank" class="btn w-50 border-end">Download CV</a>
                         <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
                     </div>
