--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/neon.css" rel="stylesheet">
         <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
@@ -162,7 +163,7 @@
                 <!-- Skills End -->
 
                 <!-- Expericence Start -->
-                <section class="py-5 wow fadeInUp" data-wow-delay="0.1s">
+                <section class="py-5 wow fadeInUp" id="experience" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5">Expericence</h1>
                     <div class="border-start border-2 border-light pt-2 ps-5">
                         <div class="position-relative mb-4">
@@ -304,7 +305,7 @@
                 <!-- Testimonial End -->
                 <!-- Blogs Start -->
 <!-- Blogs Start -->
-<section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+<section class="py-5 border-bottom wow fadeInUp" id="blogs" data-wow-delay="0.1s">
     <h1 class="title pb-3 mb-5">Blogs</h1>
     <div class="row">
         <div class="col-12">
