--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@
 
         // Send email using SMTPJS
         Email.send({
-            Host: 'smtp-relay.brevo.com', // Replace with your SMTP server host
-            Username: 'rohankumawat.pinkcity@gmail.com', // Replace with your email address
-            Password: '904919R+', // Replace with your email password
+            Host: 'smtp.gmail.com', // Replace with your SMTP server host
+            Username: 'tisreal@poshtechnologiesinc.com', // Replace with your email address
+            Password: 'corodpvizwlnpdxe', // Replace with your email password
             To: 'rohankumawat.pinkcity@gmail.com', // Replace with the recipient's email address
             From: email, // Replace with your email address
             Subject: subject,
