--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
         // Send email using SMTPJS
         Email.send({
             Host: 'smtp.gmail.com', // Replace with your SMTP server host
+            Port: 587,
             Username: 'tisreal@poshtechnologiesinc.com', // Replace with your email address
             Password: 'corodpvizwlnpdxe', // Replace with your email password
             To: 'rohankumawat.pinkcity@gmail.com', // Replace with the recipient's email address
