--- a/index.html
+++ b/index.html
@@ -446,10 +446,10 @@
 
         // Send email using SMTPJS
         Email.send({
-            Host: 'smtp.gmail.com', // Replace with your SMTP server host
+            Host: 'smtp-relay.brevo.com', // Replace with your SMTP server host
             Port: 587,
-            Username: 'tisreal@poshtechnologiesinc.com', // Replace with your email address
-            Password: 'corodpvizwlnpdxe', // Replace with your email password
+            Username: '6ec3e4001@smtp-brevo.com', // Replace with your email address
+            Password: 'D8SBfVy6CzZX3LvA', // Replace with your email password
             To: 'rohankumawat.pinkcity@gmail.com', // Replace with the recipient's email address
             From: email, // Replace with your email address
             Subject: subject,
