--- a/index.html
+++ b/index.html
@@ -326,37 +326,31 @@
                 <!-- Contact Start -->
                 <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
                     <h1 class="title pb-3 mb-5">Contact Me</h1>
-                    <p class="mb-4">Let’s build something
-                        great together! I'm here for you , so please don't hesitate to contact us if you have any query,
-                        problems or maybe suggestion. I would love to hear from you. Please submit your form.</a></p>
-                    <form id="contact_form">
+                    <p class="mb-4">Let’s build something great together! I'm here for you, so please don't hesitate to contact us if you have any query, problems, or maybe a suggestion. I would love to hear from you. Please submit your form.</p>
+    
+                    <form action="https://formsubmit.co/rohankumawat.pinkcity@gmail.com" method="POST" id="contact_form">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0 bg-secondary" id="name"
-                                        placeholder="Your Name" name="name">
+                                    <input type="text" class="form-control border-0 bg-secondary" id="name" placeholder="Your Name" name="name" required>
                                     <label for="name">Your Name</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control border-0 bg-secondary" id="email"
-                                        placeholder="Your Email" name="email">
+                                    <input type="email" class="form-control border-0 bg-secondary" id="email" placeholder="Your Email" name="email" required>
                                     <label for="email">Your Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0 bg-secondary" id="subject"
-                                        placeholder="Subject" name="subject">
+                                    <input type="text" class="form-control border-0 bg-secondary" id="subject" placeholder="Subject" name="subject" required>
                                     <label for="subject">Subject</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control border-0 bg-secondary"
-                                        placeholder="Leave a message here" id="message" style="height: 200px"
-                                        name="message"></textarea>
+                                    <textarea class="form-control border-0 bg-secondary" placeholder="Leave a message here" id="message" style="height: 200px" name="message" required></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
@@ -366,6 +360,7 @@
                         </div>
                     </form>
                 </section>
+
                 <!-- Contact End -->
 
                 <!-- Footer Start -->
