--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
                                     <label for="message">Message</label>
                                 </div>
                             </div>
+                            <input type="hidden" name="_next" value="https://rrohankumawat.github.io/portfolio/">
                             <div class="col-12">
                                 <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
                             </div>
